fix no wrap sizes

--- a/packages/assets/scss/01-atoms/_figure.scss
+++ b/packages/assets/scss/01-atoms/_figure.scss
@@ -241,26 +241,27 @@ $sp-medium-min: 20px;
   }
   // No wrapping
 
-  &--no-wrap.ma__figure {
-    float: none;
+  &--no-wrap {
+    @include clearfix;
+  }
+
+  &--no-wrap .ma__figure {
     margin-right: 0;
     margin-left: 0;
 
-    &--right {
-      width: 100%;
+    // &--right {
+    //   @media ($bp-small-min) {
+    //     padding-left: 50%;
 
-      @media ($bp-small-min) {
-        padding-left: 50%;
+    //     &.ma__figure--large {
+    //       padding-left: 0;
+    //     }
+    //   }
+    // }
 
-        &.ma__figure--large {
-          padding-left: 0;
-        }
-      }
-    }
-
-    &--left {
-      float: none !important;
-    }
+    // &--left {
+    //   float: none !important;
+    // }
   }
 
   /* NO sidebar - used in org pages stacked row sections
@@ -268,7 +269,7 @@ $sp-medium-min: 20px;
   */
   // Small
 
-  .no-sidebar &--no-wrap.ma__figure--right.ma__figure--small {
+  .no-sidebar &--no-wrap .ma__figure--right.ma__figure--small {
 
     &,
     &.ma__dataviz,
@@ -283,7 +284,7 @@ $sp-medium-min: 20px;
 
   // Medium
 
-  .no-sidebar &--no-wrap.ma__figure--right.ma__figure--medium {
+  .no-sidebar &--no-wrap .ma__figure--right.ma__figure--medium {
 
     &,
     &.ma__dataviz,
@@ -299,7 +300,7 @@ $sp-medium-min: 20px;
 
   // Large
 
-  .no-sidebar &--no-wrap.ma__figure--large {
+  .no-sidebar &--no-wrap .ma__figure--large {
     width: 100%;
 
     @media ($bp-large-min) {
